
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

Loading Syntax- and Auto-Correct-properties raised ClassNotFoundException.
  The problem concerns
  - Menu File --> New Session Properties --> tab Syntax
  - Menu Session --> sub menu Syntax --> "Configure auto correct / abbreviations"
  The problem resulted from moving the Syntax-Plugin into SQuirreL's core
  and occurs in snapshot snapshot-20250302_2058 only.

SQL editor: UNION keyword was marked red as error.

Look and Feel Plugin: Cleaned up L&F Preferences UI.

#1532 MS Excel export: Fixed NoSuchMethodError

SQL result tab header marks:
  Fixed performance problem when the SQL editor contained SQLs that were longer than 8000 characters.
  For SQLs that are longer than 8000 characters marking of result tab headers is skipped.
  The maximum number of characters can be configured at menu File --> Global Preferences
  --> tab SQL --> section "SQL result tab header". The default value is 8000.

Improved the performance of SQL result tab header marking for large SQL editor content.

SQL result tab header marks:
  The option "Compare SQLs disregarding comments, line feeds and other white spaces" did not work properly.
  The option can be found at menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

Fixed NullPointer in class NullValueColorHandler.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/46
  Excel export: The "Auto filter" option activated the auto filter for
  one extra (empty) column at the end of the Excel sheet.

Follow up to #1530: The number of a Session's finalized result tabs do not appear in SQuirreL's logs anymore