@@ -1,5 +1,0 @@
-package net.sourceforge.squirrel_sql.client.session.action.syntax;
-
-public class SyntaxState
-{
-}
